# eunomia-bpf

./: .gitignore
.github/workflows/: a.js  codeql-analysis.yml  ecc.yml  ecli.yaml  eunomia-bpf.yml  examples.yml  test.yml  test1.yml  wasm-runtime.yml
compiler/: .gitignore  Makefile
compiler/cmd/src/: compile_bpf.rs  config.rs  document_parser.rs  main.rs
ecli/: Cargo.toml  Makefile
ecli/api/: apis.yaml
ecli/api/api/: openapi.yaml
ecli/api/src/: lib.rs
ecli/api/src/client/: mod.rs
ecli/api/src/server/: mod.rs
ecli/client/src/: main.rs  utils.rs
ecli/ecli/: Cargo.toml
ecli/ecli-lib/: Cargo.toml  build.rs
ecli/ecli-lib/src/: eunomia_bpf.rs  lib.rs
ecli/ecli-lib/src/json_runner/: mod.rs
ecli/ecli-lib/src/oci/: mod.rs
ecli/ecli-lib/src/oci/wasm/: push.rs
ecli/ecli-lib/src/runner/: mod.rs  remote.rs
ecli/ecli/src/: utils.rs
ecli/eserver/: Cargo.toml
ecli/lib/: Cargo.toml  build.rs
ecli/lib/src/: lib.rs
ecli/lib/src/config/: mod.rs
ecli/lib/src/json_runner/: json.rs  mod.rs
ecli/lib/src/runner/: mod.rs  remote.rs  server.rs  utils.rs  ws_log.rs
ecli/lib/tests/common/: mod.rs
ecli/src/: main.rs
ecli/src/config/: mod.rs
ecli/src/runner/: mod.rs  remote.rs
eunomia-sdks/eunomia-rs/: Cargo.toml
eunomia-sdks/eunomia-rs/src/: lib.rs
wasm-runtime/: CMakeLists.txt
