[package]
name = "eserver"
version = "0.1.0"
edition = "2021"
# build = "../build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecli-lib = { path = "../ecli-lib"}
tokio = { version = "1.24.2", features = ["rt-multi-thread"] }
clap = { version = "4.0.32", features = ["derive"] }

[build-dependencies]
bindgen = "0.60.1"